<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    <!-- ヘッダー -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/historyTitle"
            android:textSize="20dp"
            android:layout_weight="9" />
        <Button
            android:id="@+id/button1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ToTopPage"
            android:layout_weight="1"
            android:onClick="returnTopPage" />
    </LinearLayout>
    <TextView 
        android:text="@string/stepTxt"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    
    <!-- 日付選択 -->
    <ListView
	   android:id="@+id/listview"
	   android:layout_width="match_parent"
	   android:layout_height="match_parent" >
    </ListView>
    
</LinearLayout>