<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
	
    <!-- カテゴリ選択ボタン群 ここから -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dip"
        android:layout_marginBottom="5dip"
        android:orientation="horizontal">
     	<Button 
	    	android:id="@+id/EggAndDairyAndDrink"
	        android:text="@string/EggAndDairyAndDrink"
	        android:textColor="@drawable/button_text_stateful"
	        android:layout_width="0dp"
	        android:layout_weight="2"
	        android:layout_height="wrap_content"
	        android:layout_marginLeft="5dip"
	        android:layout_marginRight="5dip"
	        android:padding="5dip"
	        android:background="@drawable/category_btn_pressed"
	        android:drawableLeft="@drawable/mytea"
	        android:onClick="orderItemInfo" />
	    <Button 
	        android:id="@+id/ProcessItems"
	        android:text="@string/ProcessItems"
	        android:textColor="@drawable/button_text_stateful"
	        android:layout_width="0dp"
	        android:layout_weight="1"
	        android:layout_height="wrap_content"
	        android:layout_marginRight="5dip"	        
	        android:padding="5dip"
	        android:background="@drawable/category_btn_normal"
	        android:drawableLeft="@drawable/myprocess"	        
	        android:onClick="orderItemInfo" />
	    <Button 
	        android:id="@+id/FishItems"
	        android:text="@string/FishItems"
	        android:textColor="@drawable/button_text_stateful"	        
	        android:layout_width="0dp"
	        android:layout_weight="1"
	        android:layout_height="wrap_content"
	        android:layout_marginRight="5dip"	        
	        android:padding="5dip"
	        android:background="@drawable/category_btn_normal"
	        android:drawableLeft="@drawable/myfish"	        
	        android:onClick="orderItemInfo" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dip"        
        android:orientation="horizontal">
	  	<Button 
	     	android:id="@+id/MeetItems"
	        android:layout_width="0dp"
	        android:layout_weight="1"
	        android:layout_height="wrap_content"
	        android:layout_marginLeft="5dip"
	        android:layout_marginRight="5dip"
	        android:padding="5dip"
	        android:text="@string/MeetItems"
	        android:textColor="@drawable/button_text_stateful"	        
	        android:background="@drawable/category_btn_normal"
	        android:drawableLeft="@drawable/mymeat"	        
	        android:onClick="orderItemInfo" />
	    <Button 
	        android:id="@+id/VegetableItems"
	      	android:layout_width="0dp"
	        android:layout_weight="1"
	        android:layout_height="wrap_content"
	        android:layout_marginRight="5dip"
	        android:padding="5dip"
	        android:text="@string/VegetableItems"
	        android:textColor="@drawable/button_text_stateful"	        
	        android:background="@drawable/category_btn_normal"
	        android:drawableLeft="@drawable/myvegetable"	        
	        android:onClick="orderItemInfo" />
	    <Button 
	    	android:id="@+id/FruitItems"
	        android:layout_width="0dp"
	        android:layout_weight="1"
	        android:layout_height="wrap_content"
	        android:layout_marginRight="5dip"
	        android:padding="5dip"
	        android:text="@string/FruitItems"
	        android:textColor="@drawable/button_text_stateful"	        
	        android:background="@drawable/category_btn_normal"
	        android:drawableLeft="@drawable/myorange"	        
	        android:onClick="orderItemInfo" />
	    <Button 
			android:id="@+id/ElseItems"
			android:layout_width="0dp"
			android:layout_weight="1"
			android:layout_height="wrap_content"
			android:layout_marginRight="5dip"
	        android:padding="5dip"
			android:text="@string/ElseItems"
	        android:textColor="@drawable/button_text_stateful"	        
	        android:background="@drawable/category_btn_normal"
	        android:drawableLeft="@drawable/myelse"			
			android:onClick="orderItemInfo" />
    </LinearLayout>
    <!-- カテゴリ選択ボタン群 ここまで -->
    
      
    <!-- 品物名表示一覧 ここから-->
	<HorizontalScrollView
		android:layout_width="match_parent"
	    android:layout_height="0dp"
	    android:layout_weight="1">
	    <ScrollView
	     	android:layout_width="wrap_content"
	        android:layout_height="match_parent">
	        <TableLayout
	        	android:id="@+id/itemInfo"
	        	android:layout_width="match_parent"
	        	android:layout_height="wrap_content">        	    
	        </TableLayout>
	   	</ScrollView>
	</HorizontalScrollView>
	<!-- 品物名表示一覧 ここまで-->
	 
	    
	<!-- 画面遷移ボタン ここから-->
	<Button 
		android:id="@+id/ToOrderConfirm"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_margin="15dip"
		android:drawableLeft="@drawable/ic_menu_agenda"
		android:background="@drawable/button_stateful"
		android:text="@string/ToOrderConfirm"
		android:textSize="18sp"
		android:textColor="@drawable/button_text_stateful"
		android:onClick="toConfirmPage" />
	<!-- 画面遷移ボタン ここまで-->
	
	<!-- フッター -->
	<include layout="@layout/footer"/>
</LinearLayout>