<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/tile_bg"
    android:orientation="vertical" >

    <!-- 注記文言 -->
    <TextView 
        android:text="@string/setup_txt"
        android:textSize="16sp"
        android:textColor="#ff0000"
        android:background="@drawable/text_bg"
        android:drawableLeft="@drawable/ic_menu_notifications"
        android:padding="5dip"
        android:layout_margin="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    
    <!-- アカウント情報 -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="1"
        android:layout_marginLeft="10dp"
	   	android:layout_marginRight="10dp"
	   	android:layout_marginBottom="10dp"
	   	android:padding="5dip"
	   	android:gravity="center"
        android:background="@drawable/text_bg"
        android:orientation="vertical">
        
        <!-- メールアドレス -->
        <TextView 
    		android:text="@string/address"
    	    android:layout_width="match_parent"
    	    android:layout_height="wrap_content"
    	    android:layout_marginBottom="10dip"/>
       	<EditText 
    		android:id="@+id/mailAddress"
    	    android:inputType="textEmailAddress"
    	    android:layout_width="match_parent"
    	    android:layout_height="wrap_content"
    	    android:layout_marginBottom="25dip"/>
            	
    	<!-- パスワード -->
    	<TextView 
    		android:text="@string/password"
    	    android:layout_width="match_parent"
    	    android:layout_height="wrap_content"
    	    android:layout_marginBottom="10dip"/>
    	<EditText
    		android:id="@+id/password"
    	    android:inputType="textPassword"
    	    android:layout_width="match_parent"
    	    android:layout_height="wrap_content"/>
    </LinearLayout>
    
    <!-- 保存ボタン -->
    <Button 
    	android:id="@+id/saveBtn"
    	android:textSize="18sp"
    	android:text="@string/saveBtn"
    	android:textColor="@drawable/button_text_stateful"
    	android:layout_width="match_parent"
    	android:layout_height="wrap_content"
    	android:drawableLeft="@drawable/ic_menu_save"
    	android:background="@drawable/button_stateful"
    	android:layout_marginLeft="10dp"
	   	android:layout_marginRight="10dp"
    	android:layout_marginBottom="10dip"
    	android:onClick="mailSetUp" />
    
    <!-- フッター -->
    <include layout="@layout/footer"/>
</LinearLayout>