<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/title_bg" >
    <ImageView
        android:id="@+id/icon" 
        android:src="@drawable/btn_star_big_on_pressed"
        android:contentDescription="@string/titleIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dip"
        android:layout_alignParentLeft="true"
        android:layout_centerVertical="true"
        android:gravity="center_vertical" />
    <TextView
        android:id="@+id/historyInfoTitle"        
        android:text="@string/historyInfoTitle"
        android:textSize="20sp"
        android:textColor="@android:color/white"
        android:layout_marginLeft="15dip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/icon"
        android:layout_centerVertical="true"
        android:gravity="center_vertical" />
    <Button
        android:id="@+id/BackButton"        
        android:text="@string/back"
        android:textSize="16sp"
        android:textColor="@android:color/white"
        android:drawableLeft="@drawable/ic_menu_revert"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:layout_marginRight="10dip"
        android:gravity="center_vertical"
        android:onClick="returnPage"
        android:background="@null" />
</RelativeLayout>