<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/tile_bg"
    android:orientation="vertical" >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="1" 
        android:orientation="vertical">
	    
	    <Button 
	        android:id="@+id/order"
	        android:enabled="false"
	        android:text="@string/order_label"
	        android:textSize="30sp"
	        android:textColor="@drawable/button_text_stateful"
	        android:background="@drawable/button_stateful"
	        android:layout_gravity="center"
	        android:gravity="center"
	        android:layout_width="match_parent"
	        android:layout_height="150dp"
	        android:drawableLeft="@drawable/ic_menu_start_conversation"
	        android:layout_marginLeft="5dip"
	        android:layout_marginRight="5dip"
	        android:layout_marginTop="100dip"
	        android:layout_marginBottom="10dp"/>
	    
	    <LinearLayout 
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginBottom="10dip"
	        android:orientation="horizontal" >
		    <Button 
		        android:id="@+id/editList"
		        android:layout_width="0dip"
		        android:layout_height="wrap_content"
		        android:layout_weight="1"
		        android:layout_marginRight="5dip"
		        android:layout_marginLeft="5dip"
		        android:background="@drawable/button_stateful"
		        android:drawableLeft="@drawable/ic_menu_edit"
		        android:text="@string/editList_label"
		        android:textSize="18sp"
		        android:textColor="@drawable/button_text_stateful" />
		    <Button 
		        android:id="@+id/orderHistory"
		        android:layout_width="0dip"
		        android:layout_height="wrap_content"
		        android:layout_weight="1"
		        android:layout_marginRight="5dip"
		        android:layout_marginLeft="5dip"
		        android:background="@drawable/button_stateful"
		        android:drawableLeft="@drawable/ic_menu_info_details"
		        android:text="@string/orderHistory_label"
		        android:textSize="18sp"
		        android:textColor="@drawable/button_text_stateful" />
	    </LinearLayout>
	    
	   	<Button 
	        android:id="@+id/mail_setup"
	        android:text="@string/mail_setup"
	        android:textSize="18sp"
	        android:textColor="@drawable/button_text_stateful"
	        android:background="@drawable/button_stateful"
	        android:gravity="center"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:drawableLeft="@drawable/ic_menu_manage"
	        android:layout_marginLeft="5dip"
	        android:layout_marginRight="5dip" /> 
	</LinearLayout>
    <include layout="@layout/footer"/>
</LinearLayout>