<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    <!-- 品物リスト -->
	<HorizontalScrollView
	  android:layout_width="match_parent"
	  android:layout_height="0dip"
	  android:layout_weight="1">
	 	<ScrollView
	    	android:layout_width="wrap_content"
	        android:layout_height="wrap_content">
	   		<LinearLayout
	        	android:id="@+id/itemInfo"
	        	android:layout_width="match_parent"
	        	android:layout_height="wrap_content"
	        	android:orientation="vertical">        	    
	        </LinearLayout>
	   	</ScrollView>
	</HorizontalScrollView>
	    
	<!-- 各種ボタン -->
	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginTop="10dip"
		android:layout_marginBottom="10dip"
		android:gravity="bottom"
		android:orientation="horizontal">
		<Button 
			android:id="@+id/ItemAdd"
		    android:layout_width="0dp"
		    android:layout_height="wrap_content"
		    android:layout_weight="1"
		    android:layout_marginLeft="5dip"
		    android:text="@string/ItemAdd"
		    android:textColor="@drawable/button_text_stateful"
		    android:background="@drawable/button_stateful"
		    android:drawableTop="@drawable/ic_menu_add"
		    android:onClick="itemAddMain" />
		<Button 
		    android:id="@+id/ItemUpdate"
		    android:layout_width="0dp"
		    android:layout_height="wrap_content"
		    android:layout_weight="1"
		    android:layout_marginLeft="5dip"
		    android:layout_marginRight="5dip"	    
		    android:text="@string/ItemUpdate"
		    android:textColor="@drawable/button_text_stateful"
		    android:background="@drawable/button_stateful"
		    android:drawableTop="@drawable/ic_menu_refresh"
		    android:onClick="itemUpDelMain" />
		<Button 
		    android:id="@+id/ItemDelete"
		    android:layout_width="0dp"
		    android:layout_height="wrap_content"
		    android:layout_weight="1"
		    android:layout_marginRight="5dip"
		    android:text="@string/ItemDelete"
		    android:textColor="@drawable/button_text_stateful"
		    android:background="@drawable/button_stateful"
		    android:drawableTop="@drawable/ic_menu_delete"
		    android:onClick="itemUpDelMain" />
	</LinearLayout>
	
	<!-- フッター -->	
	<include layout="@layout/footer"/>
</LinearLayout>